--- a/styles/style.css
+++ b/styles/style.css
@@ -100,8 +100,8 @@ main a{
 
 
 .zwarteknop a:hover {
-	background-color: darkgrey;
-	color: white;
+	background-color: white;
+	color: black;
 }
 
 
@@ -138,7 +138,8 @@ div{
 }
 
 .witteknop a:hover{
-color: grey;
+color: white;
+background-color: black;
 }
 
 .wittesectie{
@@ -325,6 +326,7 @@ h2{
 
 .sandwiches ul{
 	display:grid;
+	grid-template-rows: auto auto;
 	list-style: none;
 	padding: 0;
 	margin: 0; 
@@ -333,7 +335,7 @@ h2{
 
 
 .sandwiches li{
-	grid-template-rows: auto auto;
+	
 	margin-bottom: 1.5em;
 	border-radius: 2em;
 	background-color: white;
@@ -451,8 +453,13 @@ details[open] summary ~ * {
   }
 
 summary {
-	display: block; 
+	display: block;
+	font-weight: 600; 
+	margin: 1em;
+	color: white;
    }
+
+   
  
    
 
@@ -462,7 +469,17 @@ footer{
 display: flex;
 flex-direction: column;
 background-color:rgb(37, 40, 43);
+color: white;
 margin: 0em ;
+}
+
+footer a{
+	margin: 0.5em;
+}
+
+i{
+	display: flex;
+	flex-direction: row;
 }
 
 
@@ -470,9 +487,5 @@ margin: 0em ;
 
 
 
-/****************/
-/* JOUW STYLING */
-/****************/
 
-/* jouw code */
 
